# unitree-go2-platform

./: .gitignore  .gitmodules  README.md  config.yml  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/src/: app.py  config.py
backend/src/api/: deps.py  live.py  recordings.py  scan_ops.py  scans.py  schemas.py  settings.py
backend/src/domain/: models.py
backend/src/floorplan/: builder.py
backend/src/go2_dashboard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/src/live/: manager.py  navigation.py  teleop.py
backend/src/localization/: __init__.py  matcher.py
backend/src/parsing/: io.py  rpc.py  topics.py
backend/src/recording/: recorder.py  util.py
backend/src/replay/: session.py  store.py
backend/src/route_planning/: __init__.py  planner.py
backend/src/scan/: store.py
docs/: FLOORPLAN_GENERATION.md  GO2_WEBRTC_REFERENCE.md  PARAMETERS.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  driveChannel.ts  index.css  liveConnection.ts  pageTitle.ts  tagColors.ts  useKeyboardDrive.ts
frontend/src/components/: AppFooter.tsx  CockpitControls.tsx  CockpitNavPanel.tsx  ConnectionButton.tsx  FloorPlanView.tsx  Go2Icon.tsx  PointCloudView.tsx  RecordingTags.tsx  ReplayPlayer.tsx  ScanPathPreview.tsx  SessionInfoPanel.tsx  Sidebar.tsx  TelemetryPanel.tsx  scanMapCanvas.ts  unitreeDog.ts
frontend/src/pages/: CockpitPage.tsx  HomePage.tsx  RecordingPage.tsx  RecordingsHomePage.tsx  SettingsPage.tsx
(+14 files in other folders)
