[project]
name = "go2-dashboard"
version = "0.1.0"
description = "Go2 dashboard API — live robot feed and recording replay"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "numpy>=1.26.0",
    "opencv-python-headless>=4.8.0",
    "pyyaml>=6.0.0",
    "unitree-webrtc-connect",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
]

[project.scripts]
go2-dashboard = "app:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools]
py-modules = ["app", "config"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true

[tool.uv.sources]
unitree-webrtc-connect = { path = "../unitree_webrtc_connect", editable = true }
